--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,11 +33,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
+    
+  intl: 0.19.0
+
   shared_preferences: ^2.0.8
+  
+  # Firebase paketleri
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore_web: ^3.12.5
 
 dev_dependencies:
   flutter_test:
