--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   http: ^0.13.6
+  # Blockchain entegrasyonu icin gerekli paketler
+  web3dart: ^2.6.1
+  crypto: ^3.0.3
 
   flutter:
     sdk: flutter
