--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: vote_app
-description: "Mobil uygulama geliştirme. Vize projesi"
+name: Voxure
+description: "Voxure - Blockchain tabanlı oylama uygulaması"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
