--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: Voxure
-description: "Voxure - Blockchain tabanlı oylama uygulaması"
+description: "Voxure - Firebase tabanli oylama uygulamasi"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,11 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  http: ^0.13.6
-  # Blockchain entegrasyonu icin gerekli paketler
-  web3dart: ^2.6.1
-  crypto: ^3.0.3
-
+  http: ^1.4.0
+  
+  # Firebase paketleri
+  firebase_core: ^2.27.1
+  firebase_auth: ^4.17.9
+  cloud_firestore: ^4.15.9
+  
   flutter:
     sdk: flutter
 
@@ -41,20 +43,11 @@ dependencies:
     
   intl: 0.19.0
 
-  shared_preferences: ^2.5.3
-  
-  # Firebase paketleri
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.3
-  cloud_firestore: ^4.13.6
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # UI paketleri
   cupertino_icons: ^1.0.8
-  cloud_firestore_web: ^3.12.5
-  
-  # Icon olusturmak icin gerekli paket
-  flutter_launcher_icons: ^0.13.1
+  flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -84,7 +77,8 @@ flutter:
   #   - images/a_dot_ham.jpeg
   
   assets:
-    - images/
+    - assets/images/
+    - assets/icons/
   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
