--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
+  google_sign_in: ^6.2.1
   
   flutter:
     sdk: flutter
@@ -41,7 +42,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
     
-  intl: 0.19.0
+  intl: 0.20.2
 
   # UI paketleri
   cupertino_icons: ^1.0.8
