--- a/android/build.gradle
+++ b/android/build.gradle
@@ -17,6 +17,7 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 buildscript {
+    ext.kotlin_version = '1.8.20'
     repositories {
         google()
         mavenCentral()
