--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_auth: ^4.17.9
   cloud_firestore: ^4.15.9
   google_sign_in: ^6.2.1
+  flutter_web_auth_2: ^3.0.0 # GitHub OAuth icin eklendi
   
   flutter:
     sdk: flutter
@@ -115,3 +116,6 @@ flutter_icons:
   adaptive_icon_foreground: "images/icon1.png"
   adaptive_icon_padding: true  # Logo etrafinda padding olusturur (kucultme etkisi)
   remove_alpha_ios: true  # iOS icin alpha kanali kaldirir
+
+dependency_overrides:
+  flutter_web_auth_2: ^4.0.0
