--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   supabase_flutter: ^2.9.0
   uuid: ^4.5.1
   
+  # Yerel depolama paketleri
+  shared_preferences: ^2.2.2
+  sqflite: ^2.3.2
+  path: ^1.8.3
+  
   flutter:
     sdk: flutter
 
