--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
+  google_sign_in: ^6.2.1
+  flutter_web_auth_2: ^3.0.0 # GitHub OAuth icin eklendi
   supabase_flutter: ^2.9.0
   uuid: ^4.5.1
   
