--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,3 +47,10 @@ android {
 flutter {
     source = "../.."
 }
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'androidx.browser:browser:1.7.0'  // Chrome CustomTabs için
+}
