--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   supabase_flutter: ^2.0.2
   uuid: ^4.5.1
   
+  # OAuth ve deep linking paketleri
+  app_links: ^3.5.0
+  url_launcher: ^6.2.5
+  
   # Yerel depolama paketleri
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
